--- a/index.htm
+++ b/index.htm
@@ -318,6 +318,11 @@
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://www.youtube.com/c/CyberSecurity1">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
 
                     
                    
