--- a/index.htm
+++ b/index.htm
@@ -203,7 +203,7 @@
                         </div>
                         <h3 class="experience-designation  m0 m-blue"> Research Associate Intern
                         </h3>
-                        <h4 class="experience-company-name"> SAC/Noida/India
+                        <h4 class="experience-company-name"> ISAC/Noida/India
                         </h4>
                         <h5 class="experience-duration m0"> 08 Oct - 08 Dec 2020</h5>
 
